# employee_manager

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/assignment/.secrets/: secret.json
backend/assignment/config/: settings.py
backend/assignment/config/settings/: base.py  development.py
frontend/: Dockerfile
